--- a/pluto.org
+++ b/pluto.org
@@ -396,3 +396,16 @@ Code block functionality
 (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
 #+end_src
 
+** org-roam
+
+#+begin_src emacs-lisp
+(use-package org-roam
+  :ensure t
+  :custom
+  (org-roam-directory "~/wiki/slipbox")
+  :bind (("C-c n l" . org-roam-buffer-toggle)
+         ("C-c n f" . org-roam-node-find)
+         ("C-c n i" . org-roam-node-insert))
+  :config
+  (org-roam-setup))
+#+end_src
