--- a/config.org
+++ b/config.org
@@ -66,13 +66,7 @@
   (set-face-attribute 'fixed-pitch nil :font "JetBrains Mono" :height 160)
   (set-face-attribute 'variable-pitch nil :font "Source Sans Pro" :height 160))
 
-(if (daemonp)
-  (add-hook 'after-make-frame-functions
-            (lambda (frame)
-            (setq doom-modeline-icon t)
-              (with-selected-frame frame
-                (jg/set-font-faces))))
-  (jg/set-font-faces))
+(jg/set-font-faces)
 #+end_src
 
 ** Auto pairing
