--- a/config.org
+++ b/config.org
@@ -613,6 +613,8 @@ Improvements to the basic org-cite frontend
     (preview . "${author editor:%etal} (${year issued date}) ${title}, ${journal journaltitle publisher container-title collection-title}.\n")
     (note . "Notes on ${author editor:%etal}, ${title}")))
 
+(setq org-cite-csl-styles-dir (expand-file-name "~/docs/zotero/styles/"))
+
 (defvar citar-indicator-files-icons
   (citar-indicator-create
    :symbol (nerd-icons-faicon
