--- a/config.org
+++ b/config.org
@@ -570,6 +570,7 @@ Live server
 #+end_src
 
 ** Babel
+
 Code block functionality
 
 #+begin_src emacs-lisp
@@ -584,6 +585,41 @@ Code block functionality
 (require 'org-tempo)
 (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
 #+end_src
+
+** org-bullets
+
+Allows customization of bullets (*)
+
+#+begin_src emacs-lisp
+(use-package org-bullets
+  :after org
+  :hook (org-mode . org-bullets-mode)
+  :custom
+  (org-bullets-bullet-list '("" "")))
+#+end_src
+
+** visual-fill-mode
+
+Center text on screen
+
+#+begin_src emacs-lisp
+    (use-package visual-fill-column
+      :defer t
+      :hook (org-mode . jg/org-visual-fill-hook))
+#+end_src
+
+** org-sidebar
+
+Sidebar for org files
+
+#+begin_src emacs-lisp
+(use-package org-sidebar)
+
+(evil-define-key '(normal insert) 'org-mode-map
+  (kbd "C-x f") 'org-sidebar-tree-toggle)
+#+end_src
+
+* Note taking
 
 ** org-cite
 
@@ -655,37 +691,4 @@ Improvements to the basic org-cite frontend
            ("C-c n i" . org-roam-node-insert))
     :config
     (org-roam-setup))
-#+end_src
-
-** org-bullets
-
-Allows customization of bullets (*)
-
-#+begin_src emacs-lisp
-(use-package org-bullets
-  :after org
-  :hook (org-mode . org-bullets-mode)
-  :custom
-  (org-bullets-bullet-list '("" "")))
-#+end_src
-
-** visual-fill-mode
-
-Center text on screen
-
-#+begin_src emacs-lisp
-    (use-package visual-fill-column
-      :defer t
-      :hook (org-mode . jg/org-visual-fill-hook))
-#+end_src
-
-** org-sidebar
-
-Sidebar for org files
-
-#+begin_src emacs-lisp
-(use-package org-sidebar)
-
-(evil-define-key '(normal insert) 'org-mode-map
-  (kbd "C-x f") 'org-sidebar-tree-toggle)
 #+end_src
