--- a/config.org
+++ b/config.org
@@ -538,6 +538,11 @@ Live server
 (add-hook 'html-mode-hook 'skewer-html-mode)
 #+end_src
 
+** lsp-tailwindcss
+
+#+begin_src emacs-lisp
+(use-package lsp-tailwindcss)
+#+end_src
 
 * Org mode
 
